# evm-indexer-rs

./: .env.example  Cargo.toml  README.md
.sqlx/: query-3848e21da039b308e7de848686c582a3291141ff7b4a14b6770f747c60e393ae.json  query-60ce4797e480f41b58efa733153f8fb54ca18b35fa66af63e275bfb3b8697b8b.json  query-87bb42c3b1107ba922a381d25eec1259359efc7f107b1a3ac207f41faab4bdfe.json  query-b016b5c019d99b7fde2e13bedc7225597e5286880623d6861dbdb2a0b1cb965d.json  query-c8be5aeea6763d9d4ae80d7969d3ff16a404c72602d1fe9dc35ae98adfa14d3f.json
migrations/: 001_initial_schema.sql  002_contracts.sql  003_decoded_events.sql
src/: config.rs  decoder.rs  error.rs  fetcher.rs  lib.rs  main.rs
src/api/: handlers.rs  server.rs
src/decoder/: abi.rs  log_decoder.rs
src/fetcher/: block_fetcher.rs
src/rpc/: client.rs  types.rs
src/storage/: db.rs  model.rs  models.rs
