[package]
name = "evm-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }
tiny-keccak = { version = "2", features = ["keccak"] }
hex = "0.4"
